# moadian-full

./: README.md  pyproject.toml
src/moadian-full/: __init__.py  invoice_builder.py  main.py  serial_manager.py  tax_id.py  verhoeff.py
